# MT-plotting

Experiment-1-2/PfannerIceTea/: different_NN.txt  different_hausdor.txt  different_nnp.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
Experiment-1-2/albi-orange/: different_NN.txt  different_rift.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_rift.txt
Experiment-1-2/elbry-capu/: different_NN.txt  different_hausdor.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
Experiment-1-2/milk-soja/: different_NN.txt  different_hausdor.txt  different_nnp.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
Experiment-1-2/reine-frucht/: different_NN.txt  different_hausdor.txt  different_nnp.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
Experiment-1-2/reis-rosmary/: different_NN.txt  different_hausdor.txt  different_nnp.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
Experiment-1-2/schoko-berry/: different_NN.txt  different_hausdor.txt  different_nnp.txt  different_pfhrgb.txt  different_rift.txt  different_rsd.txt  different_shot.txt  similar_NN.txt  similar_hausdor.txt  similar_nnp.txt  similar_pfhrgb.txt  similar_rift.txt  similar_rsd.txt  similar_shot.txt
PlotPy/: different_hausdor.txt  different_pfhrgb.txt  different_rsd.txt  main.py  similar_pfhrgb.txt  similar_rsd.txt  similar_shot.txt
albiopen/: CloudSimiliarityLabel.txt  CloudSimiliarityResultlidSimilar.txt  CloudSimiliarityResultobjectSimilar.txt  DataHausdorf.txt  DataIndex.txt  DataNN.txt  DataNNPlane.txt  DataRift.txt  RSD_anzahlDp1.txt  RSD_anzahlDp2.txt  RSD_cloud1Size.txt  RSD_cloud2Size.txt  RSD_maxCor.txt  RSD_maxCorRE.txt  ShotColor_anzahlDp1.txt  ShotColor_anzahlDp2.txt  ShotColor_cloud1Size.txt  ShotColor_cloud2Size.txt  ShotColor_maxCor.txt  ShotColor_maxCorRE.txt
albiturned/: DataHausdorf.txt  DataIndex.txt  DataNN.txt  DataNNPlane.txt  DataRift.txt  RSD_anzahlDp1.txt  RSD_anzahlDp2.txt  RSD_cloud1Size.txt  RSD_cloud2Size.txt  RSD_maxCor.txt  RSD_maxCorRE.txt  ShotColor_anzahlDp1.txt  ShotColor_anzahlDp2.txt  ShotColor_maxCor.txt
capuopen/: CloudSimiliarityLabel.txt  DataHausdorf.txt  DataIndex.txt  DataNN.txt  DataNNPlane.txt  DataRift.txt  RSD_anzahlDp1.txt  RSD_anzahlDp2.txt  RSD_cloud2Size.txt  RSD_maxCor.txt  RSD_maxCorRE.txt  ShotColor_anzahlDp1.txt  ShotColor_anzahlDp2.txt  ShotColor_cloud1Size.txt  ShotColor_maxCor.txt  ShotColor_maxCorRE.txt
grueneropen/: CloudSimiliarityLabel.txt  CloudSimiliarityResultlidSimilar.txt  CloudSimiliarityResultobjectSimilar.txt  DataHausdorf.txt  DataIndex.txt  DataNN.txt  DataNNPlane.txt  DataRift.txt  RSD_anzahlDp1.txt  RSD_anzahlDp2.txt  RSD_cloud1Size.txt  RSD_cloud2Size.txt  RSD_maxCor.txt  RSD_maxCorRE.txt  ShotColor_anzahlDp1.txt  ShotColor_anzahlDp2.txt  ShotColor_cloud1Size.txt  ShotColor_cloud2Size.txt  ShotColor_maxCor.txt  ShotColor_maxCorRE.txt
rs_bs/: CMakeLists.txt  README.md  package.xml
rs_bs/config/: config_bs_unreal_vision.ini
rs_bs/descriptors/analysis_engines/: demo_w_ue4bs.yaml  mongo_w_ue4bs.yaml  mongo_w_ue4bs_min.yaml  ue4bs.yaml  ue4bs_min.yaml
rs_bs/descriptors/annotators/: BeliefStateCameraUpdater.yaml  BeliefStateObjectHighlighter.yaml  BeliefStateObjectSynchronization.yaml  BeliefStatePoseRefinement.yaml  BeliefStateSceneRefinement.yaml  BeliefStateSegmentationAnnotator.yaml  BeliefStateSensorPublisher.yaml  BeliefStateSensorVisualizer.yaml
rs_bs/descriptors/typesystem/: all_types.xml  beliefstate_types.xml
rs_bs/include/rs_bs/: BeliefStateCommunication.h  BeliefStateRepresentation.h  CloudSimilarity.h  ObjectBeliefStateMatcher.h  ViewNames.h  featureTest.h
rs_bs/include/rs_bs/types/: all_types.h  beliefstate_types.h  type_definitions.h
rs_bs/src/: BeliefStateCameraUpdater.cpp  BeliefStateCommunication.cpp  BeliefStateObjectHighlighter.cpp  BeliefStateObjectSynchronization.cpp  BeliefStatePoseRefinement.cpp  BeliefStateRepresentation.cpp  BeliefStateSceneRefinement.cpp  BeliefStateSegmentationAnnotator.cpp  BeliefStateSensorPublisher.cpp  BeliefStateSensorVisualizer.cpp  CloudSimilarity.cpp  featureTest.cpp
testing/Soja-elbry/: CloudSimiliarityLabel.txt  ShotColor_average_all.txt  ShotColor_average_corr.txt  ShotColor_average_upper.txt  ShotColor_maxWD.txt  ShotColor_max_all.txt  ShotColor_max_corr.txt  ShotColor_sqrt.txt
testing/honig-honig/: CloudSimiliarityLabel.txt  CloudSimiliarityResult.txt  ShotColor_average_all.txt  ShotColor_average_corr.txt  ShotColor_average_upper.txt  ShotColor_max_all.txt  ShotColor_max_corr.txt  ShotColor_max_remain_corr.txt  (+1 more)
(+311 files in other folders)
